# CrochetCharts

./: .gitignore  CMakeLists.txt  README  README.md  crochet.qrc  crochet.rc  crochet.xml  install.sh  license.txt  run_tests.sh  stitches.xml  tests.sh  version.cmake  version.h.in  version.sh  version_number.sh
cmake/modules/: DocbookDocGeneration.cmake  DocbookEntities.ent.in  DocbookGen.cmake  Doxyfile.in  FindHunSpell.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  MacOSXBundleInfo.plist.in  MacroOutOfSourceBuild.cmake  NSIS.template.in  version.cpp.in
docs/: CMakeLists.txt  crochet.docbook  crochet.qhcp  crochet.qhp  homepage.html  index.docbook  index.docbook.in  index.html  intro.docbook  introduction.docbook  mystyle.css  mystyle.xsl  mystyle.xsl.in  options.docbook
docs/images/: toolbar.png.old
images/: Crochet Charts.icns  PatternDocument.icns  crochet_icon.kra  fill-color.xcf  grid_mode.xcf  installer.xcf  splashscreen.xcf  wizard_watermark.kra
logos/: sheep only.eps  stitchworks_logo_FNL.eps  stitchworks_logo_and_palette_FNL.eps  words_only.eps
qttests/: CMakeLists.txt  tst_modeltest.cpp  tst_modeltest.h
resources/: CrochetCharts.desktop  CrochetCharts.desktop.in  Entitlements.plist  build.txt  crochet.rc  installer-description.txt  installer-license.txt  installer-readme.txt  installer-welcome.txt  installers.cmake  license.txt  mac.cmake  platforms.cmake  qt.conf  vnd.nokia.qt.creatorproject.desktop  vnd.stitchworks.pattern.xml  vnd.sws-crochetcharts.pattern.xml
resources/crosscompile/: README.txt  apple-darwin9.txt  mkodcctools  setup-tools.sh
resources/deb/: postinst  prerm
resources/mac/: Info.plist  MacDmgDsStore  MacOSXBundleInfo.plist.in  PkgInfo  build.txt  create-mac-app.py  gitx.plist  mac-bundle.sh  mplayerXInfo.plist
resources/win/: build.txt  crochet.rc
server/: connection.php  current-software-version.php  license-functions.php  license-sws-software.php  license.php  serial-number.php  serialnumbers.sql  single-serial-number.php  test-license-functions.php  update-functions.php  update.php  validate-email.php
server/website/: INSTALL.txt  about-us.odt  dedications.txt  docbook-links.txt  facebook-bagde.txt  godaddy-site-cert.txt  paypal-verified.txt  policies.odt  recaptcha.txt
src/: CMakeLists.txt  ChartImage.cpp  ChartImage.h  ChartItemTools.cpp  ChartItemTools.h  alignanddistribute.cpp  alignanddistribute.h  alignanddistribute.ui  aligndock.cpp  aligndock.h  aligndock.ui  appinfo.cpp  appinfo.h  application.cpp  application.h  cell.cpp  cell.h  center.cpp  center.h  chartLayer.cpp  chartLayer.h  charttab.cpp  charttab.h  chartview.cpp  chartview.h  colorlabel.cpp  colorlabel.h  colorlistwidget.cpp  colorlistwidget.h  colorreplacer.cpp  colorreplacer.h  colorreplacer.ui  crochetcell.cpp  crochetcell.h  crochetchartcommands.cpp  crochetchartcommands.h  crochetdatamodel.cpp  crochetdatamodel.h  crochethighlighter.cpp  crochethighlighter.h  (+135 more)
src/tests/: testcrochetdatamodel.cpp
stitches/: stitches.qrc  stitches.xml
tests/: CMakeLists.txt  main.cpp  testcell.cpp  testcell.h  testcrochetdatamodel.cpp  testcrochetdatamodel.h  testlicense.cpp  testlicense.h  tests.h  tests_parse.awk  testsettings.cpp  testsettings.h  teststitch.cpp  teststitch.h  teststitchcollection.cpp  teststitchcollection.h  teststitchlibrary.cpp  teststitchlibrary.h  teststitchset.cpp  teststitchset.h  testtextview.cpp  testtextview.h  tst_modeltest.cpp  tst_modeltest.h
utils/hooks/: pre-commit  pre-commit-chain.bash
